--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Microsoft Identity Python Web App: Index</title>
+    <title>Microsoft Identity Python Web App AD B2C: Index</title>
 </head>
 <body>
     <h1>Microsoft Identity Python Web App</h1>
